--- a/client/src/app/parent-mode/child/child.component.html
+++ b/client/src/app/parent-mode/child/child.component.html
@@ -1,43 +1,27 @@
-
-<h1>Adding Child</h1>
-  <div class="text-center">
-    <h1 class="text">My child</h1>
-  </div>
-  <ul class="text-center">
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Name</th>
-          <th>user_id</th>
-          <th>habit_child_map_id</th>
-          <th>Delete</th>
-          <th>Edit</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let c of children$ | async">
-          <td>{{ c.child_id }}</td>
-          <td>{{ c.child_name }}</td>
-          <td>{{ c.user_id }}</td>
-          <td>{{ c.habit_child_map_id }}</td>
-          <td>
-            <button type="button" style="background-color:rgb(232, 57, 57); color: white" (click)="deleteChild(c.child_id!)">Delete</button>
-          </td>
-          <td>
-            <button type="button" style="background-color:rgb(65, 65, 228); color: white" (click)="editChild(c.child_id!, c.child_name!)">Edit</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </ul>  
-  <div class="button">
-    <button type="button" class="text" style="background-color:rgb(53, 207, 53); color: white"  (click)="addingChild()">Add Child</button>
-    <button type="button" class="text" (click)="findingChild()">Find Child</button>
+<div class="add-child-input">
+  <mat-form-field>
+      <mat-label>Child Name</mat-label>
+      <input matInput placeholder="Andy" [(ngModel)]="childName">
+    </mat-form-field>
+    <button mat-raised-button style="background-color: rgb(77, 186, 120); color:white" (click)="addingChild()">Add Child</button>
 </div>
-<div *ngIf="child$ | async as child" >
-    <li class="button">ChildId: {{ child.child_id }}</li>
-    <li class="button">ChildName: {{ child.child_name }}</li>
-    <li class="button">UserId: {{ child.user_id }}</li>
-    <li class="button">habit_child_map_id: {{ child.habit_child_map_id }}</li>
-</div>
+<table mat-table [dataSource]="children$" class="mat-elevation-z8 child-table">
+  <ng-container matColumnDef="child_name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let c"> {{ c.child_name }} </td>
+  </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Delete </th>
+    <td mat-cell *matCellDef="let c">
+      <button  mat-raised-button style="background-color:rgb(232, 57, 57); color: white" (click)="deleteChild(c.child_id!)">Delete</button>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="actions2">
+    <th mat-header-cell *matHeaderCellDef> Edit </th>
+    <td mat-cell *matCellDef="let c">
+      <button mat-raised-button style="background-color:rgb(65, 65, 228); color: white" (click)="editChild(c.child_id!, c.child_name!)">Edit</button>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="['child_name', 'actions',  'actions2']"></tr> 
+  <tr mat-row *matRowDef="let row; columns: ['child_name', 'actions',  'actions2']"></tr>
+</table>
