--- a/client/src/app/parent-mode/child/child.component.scss
+++ b/client/src/app/parent-mode/child/child.component.scss
@@ -1,41 +1,19 @@
-.text-center{
-    display: flex;
-    justify-content: center;
+.add-child-input{
+  width: 300px;
+  display: block;
+  margin: 0 auto;
+   button, mat-form-field{
+    margin: 0 auto;
+    display: block;
+   }
 }
 
-.vertical-center {
-  margin: 100px;
-  position: absolute;
-  top: 80%;
+.child-table {
+  border-radius: 10px;
+  overflow: hidden;
+  margin: 20px auto;
 }
 
-.button{
-  display: flex; 
-  justify-content: center; 
-  align-items: center;
+.mat-cell, .mat-header-cell {
+  padding: 15px;
 }
-
-.text{
-    margin-top: 20px;
-    font-weight: bold;
-}
-table {
-    width: 15%;
-    border-collapse: collapse;
-    margin-top: 20px; /* Adjust as needed */
-  }
-  
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #f2f2f2; /* Add background color for header cells */
-  }
-  
-  /* Optional: Add hover effect */
-  tr:hover {
-    background-color: #f5f5f5;
-  }
