--- a/client/src/app/parent-mode/habit/habit.component.html
+++ b/client/src/app/parent-mode/habit/habit.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="habitChildMapData" class="mat-elevation-z8 demo-table" style="width: 80%">
+<table mat-table [dataSource]="habitChildMapData" class="mat-elevation-z8 habit-table" style="width: 80%">
     <ng-container matColumnDef="habit">
         <th mat-header-cell *matHeaderCellDef>Habit</th>
         <td mat-cell *matCellDef="let item">{{item.habit_name}}</td>
@@ -14,16 +14,24 @@
         <th mat-header-cell *matHeaderCellDef>Child Name</th>
         <td mat-cell *matCellDef="let item">{{item.child_name}}</td>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumnsHabit"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumnsHabit;"></tr>
+
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Delete </th>
+        <td mat-cell *matCellDef="let c">
+          <button  mat-raised-button style="background-color:rgb(232, 57, 57); color: white" (click)="deleteHabit()">Delete</button>
+        </td>
+      </ng-container>
+
+    <ng-container matColumnDef="actions2">
+        <th mat-header-cell *matHeaderCellDef> Edit </th>
+        <td mat-cell *matCellDef="let c">
+          <button mat-raised-button style="background-color:rgb(65, 65, 228); color: white" (click)="addHabit()">Edit</button>
+        </td>
+    </ng-container>
+    
+    <tr mat-header-row *matHeaderRowDef="['habit','child_id','child_name', 'actions',  'actions2']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['habit','child_id','child_name', 'actions',  'actions2']"></tr>
+
 </table>
-
-<!-- Admin Purposes Only -->
-<mat-form-field style="margin-top: 20px;" *ngIf="showAdminColumns">
-    <mat-label>Filter by User ID: (temp)</mat-label>
-    <input matInput [(ngModel)]="formUserId" placeholder="User ID" value="1" required
-        style="border-bottom: 1px solid grey">
-    <button mat-button (click)="filterHabitsbyUser()" style="background:lightgrey; color: white">Save</button>
-</mat-form-field>
-
 <button mat-raised-button (click)="toggleColumns()" class="demo-button">Admin</button>
+<button mat-raised-button style="background-color: rgb(77, 186, 120); color:white" (click)="addHabit()">Add Habit</button>
