Add inline editing support for Step 1 Child and basic content for Step 3 Done
Summary:
  * Added input box on Step 1 for user to add child's name
  * Implemented alternative way to access Child table data via MatTableDataSource
  * Imported mat-icon to introduce new icon buttons for editing/deleting

Test:
  * Go to http://localhost:300 and add child and see it added to table
  * Test edit/delete icon buttons to make sure they work

--- a/client/src/app/parent-mode/stepper/stepper.component.html
+++ b/client/src/app/parent-mode/stepper/stepper.component.html
@@ -23,7 +23,15 @@
 
     <mat-step>
         <ng-template matStepLabel>Done</ng-template>
-        <p>You are now done.</p>
+        <div class="done-setup">
+            <h2>All done!</h2>
+            <p>Now that you've added habits for your children, click on the button below so they can start their daily
+                adventure of tracking their habits!</p>
+            <button mat-raised-button style="background:#4eba78; color: white">
+                <mat-icon>child_care</mat-icon>
+                Enter Child Mode
+            </button>
+        </div>
         <div>
             <button mat-button matStepperPrevious>Back</button>
         </div>
