--- a/client/src/app/parent-mode/stepper/stepper.component.scss
+++ b/client/src/app/parent-mode/stepper/stepper.component.scss
@@ -2,7 +2,11 @@
     float: right;
 }
 
-.child-form{
-  width: 50%;
-  margin: 0 auto;
+.child-form {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.done-setup {
+    text-align: center;
 }
