--- a/client/src/app/parent-mode/child/child.component.scss
+++ b/client/src/app/parent-mode/child/child.component.scss
@@ -1,11 +1,13 @@
-.add-child-input{
+.add-child-input {
   width: 300px;
   display: block;
   margin: 0 auto;
-   button, mat-form-field{
+
+  button,
+  mat-form-field {
     margin: 0 auto;
     display: block;
-   }
+  }
 }
 
 .child-table {
@@ -14,6 +16,11 @@
   margin: 20px auto;
 }
 
-.mat-cell, .mat-header-cell {
+.mat-cell,
+.mat-header-cell {
   padding: 15px;
+}
+
+.mat-column-child_name {
+  width: 400px;
 }
