Edit Habit on the frontend (Step 2)
Summary:
	*Create API calls for habit and habitChildMap records
	*Ability to update the habit name
	*Ability to see previous data about the habit that user can update
	*Add records of new added children
Test:
	*Check the localhost://3000 and user can edit the table
	*When the user add AND delete someone from habit there is a delay in updating

--- a/client/src/app/parent-mode/habit/habit-dialog/habit-dialog.component.html
+++ b/client/src/app/parent-mode/habit/habit-dialog/habit-dialog.component.html
@@ -3,7 +3,9 @@
       <mat-dialog-content>
         <input matInput tabindex="1" [(ngModel)]="habitName" placeholder="Brush Teeth" />
         <h1>Choose child</h1>
-        <mat-checkbox *ngFor="let child of children" [(ngModel)]="child.checked">{{child.child_name}}</mat-checkbox>
+        <div *ngFor="let child of children">
+          <mat-checkbox  [(ngModel)]="child.checked">{{child.child_name}}</mat-checkbox>
+        </div>
       </mat-dialog-content>
       <mat-dialog-actions>
         <button mat-button tabindex="2" (click)="chosenChildrenAndAddHabit()">
