--- a/client/src/app/parent-mode/habit/habit.component.html
+++ b/client/src/app/parent-mode/habit/habit.component.html
@@ -17,15 +17,15 @@
 
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Delete </th>
-        <td mat-cell *matCellDef="let c">
+        <td mat-cell *matCellDef="let item">
           <button  mat-raised-button style="background-color:rgb(232, 57, 57); color: white" (click)="deleteHabit()">Delete</button>
         </td>
       </ng-container>
 
     <ng-container matColumnDef="actions2">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef="let c">
-          <button mat-raised-button style="background-color:rgb(65, 65, 228); color: white" (click)="addHabit()">Edit</button>
+        <td mat-cell *matCellDef="let item">
+          <button mat-raised-button style="background-color:rgb(65, 65, 228); color: white" (click)="addOrEditHabit(item)">Edit</button>
         </td>
     </ng-container>
     
@@ -34,4 +34,4 @@
 
 </table>
 <button mat-raised-button (click)="toggleColumns()" class="demo-button">Admin</button>
-<button mat-raised-button style="background-color: rgb(77, 186, 120); color:white" (click)="addHabit()">Add Habit</button>
+<button mat-raised-button style="background-color: rgb(77, 186, 120); color:white" (click)="addOrEditHabit()">Add Habit</button>
