--- a/client/src/app/parent-mode/habit/habit.component.html
+++ b/client/src/app/parent-mode/habit/habit.component.html
@@ -1,3 +1,11 @@
+<mat-button-toggle-group aria-label="Children Toggle">
+    <mat-button-toggle [value]="'All'" (click)="onToggleClick(0)">ALL</mat-button-toggle>
+    <mat-button-toggle *ngFor="let child of children" [value]="child.child_name"
+        (click)="onToggleClick(child.child_id!)">
+        {{ child.child_name }}
+    </mat-button-toggle>
+</mat-button-toggle-group>
+
 <table mat-table [dataSource]="habitChildMapData" class="mat-elevation-z8 habit-table" style="width: 80%">
     <ng-container matColumnDef="habit">
         <th mat-header-cell *matHeaderCellDef>Habit</th>
@@ -18,7 +26,7 @@
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Delete </th>
         <td mat-cell *matCellDef="let item">
-          <button  mat-raised-button style="background-color:rgb(232, 57, 57); color: white" (click)="deleteHabit()">Delete</button>
+            <button mat-button (click)="deleteHabit(item.habit_id)" style="color:red"><mat-icon>delete</mat-icon></button>
         </td>
       </ng-container>
 
@@ -33,5 +41,4 @@
     <tr mat-row *matRowDef="let row; columns: ['habit','child_id','child_name', 'actions',  'actions2']"></tr>
 
 </table>
-<button mat-raised-button (click)="toggleColumns()" class="demo-button">Admin</button>
 <button mat-raised-button style="background-color: rgb(77, 186, 120); color:white" (click)="addOrEditHabit()">Add Habit</button>
