[Frontend] Add new My Day page to display habits (per child) which can be flipped & [Backend] Update backend to make habit_status accessible to My Day component
Summary:
   [Frontend]
   * Create new My Day component with grid of flippable cards
   * Add toggle button bar to filter habits by child name
   * Support habit_status boolean (in db) to switch upon card flip
   * Implement support (via console log) for upcoming screen changes when
all daily habits are done
   * Add CDN libraries (in index.html) to support bootstrap and animations
   * Fix bug preventing 'filter habits by child' toggle bar from
displaying on Step 1 (Add Child)
   * Add support for audio sound effects when card is flipped
   [Backend]
   * Modify typeorm query & entity files to make habit_status from
habit/child map table accesible on My Day page (when it loads)
   * Add new http endpoints to get and update habit_status on habit/child
map table based only on child id and habit it

Test:
   [Frontend]
   * Go to http://localhost:3000/myday and see new My Day page with grid
of cards and 'filter habits by child' toggle bar
   * Click on card to change status and verify via postman that
habit_status changed in backend
   * Click all cards for 1 child and see console log message appear:
'Congrats! all habits for child_id of __ is true'
   [Backend]
   * Use postman to verify new GET & PATCH endpoints return expected data
(or make expected updates)

Note:
   - due to incompatibility between 2 animation libraries, custom 'change
class' directive was added to remove a class name after .7 seconds to
support rotation animation (flipping) when card is clicked

 when done

--- a/client/src/app/child-mode/my-day/my-day.component.html
+++ b/client/src/app/child-mode/my-day/my-day.component.html
@@ -1,1 +1,60 @@
-<p>child-mode works!</p>
+<body class="m-3 mb-8">
+  <mat-button-toggle-group aria-label="Children Toggle">
+    <mat-button-toggle [value]="'All'" (click)="onToggleClick(0)"
+      >ALL</mat-button-toggle
+    >
+    <mat-button-toggle
+      *ngFor="let child of children"
+      [value]="child.child_name"
+      (click)="onToggleClick(child.child_id!)"
+    >
+      {{ child.child_name }}
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+
+  <div class="row">
+    <div
+      *ngFor="let habit of habitChildMap; let i = index"
+      class="card-wrapper col-lg-4 col-md-6 col-sm-12 mb-4"
+    >
+      <div
+        class="card card-rotating text-center"
+        [style]="getColorStyle(i)"
+        [class.flipped]="habit.habit_status"
+        (click)="
+          handleClick(i, habit);
+          habit.habit_status ? audioPlayer.play() : audioPlayer2.play()
+        "
+        [changeClass]="[
+          'animate__animated',
+          'animate__flipInY',
+          'animate__fast'
+        ]"
+      >
+        <div class="face front">
+          <a class="btn btn-primary rotate-btn"
+            >{{ habit.child_id }} | {{ habit.habit_id }} |
+            {{ habit.habit_status }}<br />I did it!</a
+          >
+          <h1 class="card-title">{{ habit.habit_name }}</h1>
+        </div>
+
+        <div class="face back">
+          <a class="btn btn-primary rotate-btn"
+            >{{ habit.child_id }} | {{ habit.habit_id }} |
+            {{ habit.habit_status }}<br />I didn't do it yet!</a
+          >
+          <h1 class="card-title">{{ habit.habit_name }}</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <audio #audioPlayer controls>
+    <source src="./assets/card-flip01.mp3" type="audio/mp3" />
+    Your browser does not support the audio element.
+  </audio>
+  <audio #audioPlayer2 controls>
+    <source src="./assets/card-flip02.mp3" type="audio/mp3" />
+    Your browser does not support the audio element.
+  </audio>
+</body>
