--- a/client/src/app/parent-mode/habit/habit.component.html
+++ b/client/src/app/parent-mode/habit/habit.component.html
@@ -1,44 +1,85 @@
 <mat-button-toggle-group aria-label="Children Toggle">
-    <mat-button-toggle [value]="'All'" (click)="onToggleClick(0)">ALL</mat-button-toggle>
-    <mat-button-toggle *ngFor="let child of children" [value]="child.child_name"
-        (click)="onToggleClick(child.child_id!)">
-        {{ child.child_name }}
-    </mat-button-toggle>
+  <mat-button-toggle [value]="'All'" (click)="onToggleClick(0)"
+    >ALL</mat-button-toggle
+  >
+  <mat-button-toggle
+    *ngFor="let child of children"
+    [value]="child.child_name"
+    (click)="onToggleClick(child.child_id!)"
+  >
+    {{ child.child_name }}
+  </mat-button-toggle>
 </mat-button-toggle-group>
 
-<table mat-table [dataSource]="habitChildMapData" class="mat-elevation-z8 habit-table" style="width: 80%">
-    <ng-container matColumnDef="habit">
-        <th mat-header-cell *matHeaderCellDef>Habit</th>
-        <td mat-cell *matCellDef="let item">{{item.habit_name}}</td>
-    </ng-container>
+<table
+  mat-table
+  [dataSource]="habitChildMapData"
+  class="mat-elevation-z8 habit-table"
+  style="width: 80%"
+>
+  <ng-container matColumnDef="habit">
+    <th mat-header-cell *matHeaderCellDef>Habit</th>
+    <td mat-cell *matCellDef="let item">{{ item.habit_name }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="child_id" *ngIf="showAdminColumns">
-        <th mat-header-cell *matHeaderCellDef>Child ID</th>
-        <td mat-cell *matCellDef="let item">{{item.child_id}}</td>
-    </ng-container>
+  <ng-container matColumnDef="child_id" *ngIf="showAdminColumns">
+    <th mat-header-cell *matHeaderCellDef>Child ID</th>
+    <td mat-cell *matCellDef="let item">{{ item.child_id }}</td>
+  </ng-container>
 
+  <ng-container matColumnDef="child_name">
+    <th mat-header-cell *matHeaderCellDef>Child Name</th>
+    <td mat-cell *matCellDef="let item">{{ item.child_name }}</td>
+  </ng-container>
 
-    <ng-container matColumnDef="child_name">
-        <th mat-header-cell *matHeaderCellDef>Child Name</th>
-        <td mat-cell *matCellDef="let item">{{item.child_name}}</td>
-    </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Delete</th>
+    <td mat-cell *matCellDef="let item">
+      <button
+        mat-button
+        (click)="deleteHabit(item.habit_id)"
+        style="color: red"
+      >
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
 
-    <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Delete </th>
-        <td mat-cell *matCellDef="let item">
-            <button mat-button (click)="deleteHabit(item.habit_id)" style="color:red"><mat-icon>delete</mat-icon></button>
-        </td>
-      </ng-container>
+  <ng-container matColumnDef="actions2">
+    <th mat-header-cell *matHeaderCellDef>Edit</th>
+    <td mat-cell *matCellDef="let item">
+      <button
+        mat-raised-button
+        style="background-color: rgb(65, 65, 228); color: white"
+        (click)="addOrEditHabit(item)"
+      >
+        Edit
+      </button>
+    </td>
+  </ng-container>
 
-    <ng-container matColumnDef="actions2">
-        <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef="let item">
-          <button mat-raised-button style="background-color:rgb(65, 65, 228); color: white" (click)="addOrEditHabit(item)">Edit</button>
-        </td>
-    </ng-container>
-    
-    <tr mat-header-row *matHeaderRowDef="['habit','child_id','child_name', 'actions',  'actions2']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['habit','child_id','child_name', 'actions',  'actions2']"></tr>
-
+  <tr
+    mat-header-row
+    *matHeaderRowDef="[
+      'habit',
+      'child_id',
+      'child_name',
+      'actions',
+      'actions2'
+    ]"
+  ></tr>
+  <tr
+    mat-row
+    *matRowDef="
+      let row;
+      columns: ['habit', 'child_id', 'child_name', 'actions', 'actions2']
+    "
+  ></tr>
 </table>
-<button mat-raised-button style="background-color: rgb(77, 186, 120); color:white" (click)="addOrEditHabit()">Add Habit</button>
+<button
+  mat-raised-button
+  style="background-color: rgb(77, 186, 120); color: white"
+  (click)="addOrEditHabit()"
+>
+  Add Habit
+</button>
