My collection page for each child
Summary:
	*Add routing to the MyCollection Page
	*My collection is filtered with activated and disabled prizes according to the child's progress
	*Add toggle button to switch between kids
	*Updated Child Entity Table and Child Interface with activatedItems property
	*Add 3dModel, Picture assests to the MyCollection page
Test:
	*Run app locally, visited localhost://3000 and test everything works

--- a/client/src/app/parent-mode/home/home.component.scss
+++ b/client/src/app/parent-mode/home/home.component.scss
@@ -17,10 +17,11 @@
 
 .container{
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     min-height: 100vh;
-    width: 700px;
+    width: 100%;
+    min-width: 85%;
     grid-column: 1/2;
     grid-row: 1/2;
 }
