--- a/client/src/app/parent-mode/stepper/stepper.component.html
+++ b/client/src/app/parent-mode/stepper/stepper.component.html
@@ -27,7 +27,7 @@
             <h2>All done!</h2>
             <p>Now that you've added habits for your children, click on the button below so they can start their daily
                 adventure of tracking their habits!</p>
-            <button mat-raised-button style="background:#4eba78; color: white">
+            <button mat-raised-button style="background:#4eba78; color: white" (click)="enterChildMode()">
                 <mat-icon>child_care</mat-icon>
                 Enter Child Mode
             </button>
