Change the percentage of the dialog and the asset in it

--- a/client/src/app/child-mode/my-collection/pop-up/pop-up.component.html
+++ b/client/src/app/child-mode/my-collection/pop-up/pop-up.component.html
@@ -1,7 +1,7 @@
 <ol>
     <h1 mat-dialog-title class="sign">My Prize</h1>
         <mat-dialog-content>
-        <model-viewer src="../../../../assets/davidDance.glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1" style="width:800px; height:800px"></model-viewer>
+        <model-viewer src="../../../../assets/davidDance.glb" camera-controls ar autoplay scale="10 10 10" shadow-intensity="1" style="width: 800px;; height:800px"></model-viewer>
         </mat-dialog-content>
         <mat-dialog-actions>
           <button mat-button tabindex="2" (click)="ok()">Ok</button>
