--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+// @import "@angular/material/theming";
+
+// @include mat-core();
+
+// $spark-primary: ;
+// $spark-accent: mat-palette($mat-pink, A200, A100, A400);
+// $spark-warn: mat-palette($mat-red);
+
+// $spark-theme: mat-light-theme(
+//   (
+//     color: (
+//       primary: $spark-primary,
+//       accent: $spark-accent,
+//       warn: $spark-warn,
+//     ),
+//   )
+// );
+
+// @include angular-material-theme($spark-theme);
+
+// button.mat-button {
+//   @include angular-material-theme($spark-theme);
+// }
