Make minor client-side changes based on PR comments
Summary:
  * Clean up code by removing comments and console log messages and test data

Test:
  * Go to http://localhost:3000, login as userId 1 and click 'enter child mode' button
to access My Day and verify core functionality still works

--- a/client/src/app/child-mode/my-day/my-day.component.scss
+++ b/client/src/app/child-mode/my-day/my-day.component.scss
@@ -1,8 +1,12 @@
 * {
   margin: 0;
 }
-body {
-  background-color: #dfe0e2;
+body,
+.mat-typography {
+  background-color: #dfe0e2 !important;
+}
+:host {
+  background-color: #dfe0e2 !important;
 }
 //audio
 audio {
