--- a/client/src/app/child-mode/nav/nav.component.html
+++ b/client/src/app/child-mode/nav/nav.component.html
@@ -1,29 +1,22 @@
-Test Nav<mat-tab-group class="navbar" headerPosition="below">
+<mat-tab-group class="navbar" headerPosition="below">
   <mat-tab>
     <ng-template mat-tab-label>
-      <mat-icon>home</mat-icon>
-      <a mat-icon class="example-tab-icon" routerLink="/home">Home</a>
+      <a mat-icon class="tab-icon" routerLink="/myday"
+        ><mat-icon>calendar_today</mat-icon> My Day</a
+      >
     </ng-template>
   </mat-tab>
 
   <mat-tab>
     <ng-template mat-tab-label>
-      <mat-icon>calendar_today</mat-icon>
-      <a mat-icon class="example-tab-icon" routerLink="/myday">My Day</a>
-    </ng-template>
-  </mat-tab>
-
-  <mat-tab>
-    <ng-template mat-tab-label>
-      <mat-icon>collections</mat-icon>
       <a
         mat-icon
-        class="example-tab-icon"
-        routerLink="/stepper"
+        class="tab-icon"
+        routerLink="/mycollection"
         matBadge="1"
         matBadgePosition="after"
         matBadgeColor="accent"
-        >My Prize</a
+        ><mat-icon>collections</mat-icon> My Prize</a
       >
     </ng-template>
   </mat-tab>
