--- a/client/src/app/child-mode/my-collection/my-collection.component.scss
+++ b/client/src/app/child-mode/my-collection/my-collection.component.scss
@@ -5,18 +5,19 @@
           box-sizing: border-box;
 }
 
-.children{
-  display: flex;
-  margin: 100px;
-
-}
-
-.col{
-  opacity: 0.4;
+.theme{
+  background-image: url('../../../assets/bg.png');
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  
 }
 
 .open{
-  opacity: 1 !important;
+  //opacity: 1 !important;
+  .inner{
+    filter: none;
+  }
 }
 
 h1{
@@ -131,6 +132,7 @@ h1{
     -webkit-perspective: inherit;
             perspective: inherit;
     z-index: 2;
+    filter: grayscale(1) invert(0.5);
 }
 
 .container .back{
